[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.12.1"
pandas = "^1.5.3"
plotly = "^5.13.0"
matplotlib = "^3.7.0"
afinn = "^0.1"
nltk = "^3.8.1"
snscrape = "^0.5.0"
CallTestpy = "^0.0.0"
wordcloud = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
